--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,24 +3,35 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/primaryColor</item>
+        <item name="colorPrimaryDark">@color/primaryDarkColor</item>
+        <item name="colorAccent">@color/secondaryColor</item>
     </style>
 
     <style name="PrimaryButton" parent="Widget.AppCompat.TextView">
         <item name="android:layout_margin">8dp</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:backgroundTint">@color/colorPrimary</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:backgroundTint">@color/primaryColor</item>
+        <item name="android:textColor">@color/primaryTextColor</item>
     </style>
 
     <style name="ColoredLabel" parent="Widget.AppCompat.TextView">
-        <item name="android:background">@color/colorPrimaryDark</item>
-        <item name="android:textAlignment">center</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:padding">4dp</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:background">@color/primaryLightColor</item>
+    </style>
+
+    <style name="ColoredLabelTint" parent="Widget.AppCompat.TextView">
+        <item name="android:background">@color/primaryLightColor</item>
+        <item name="android:backgroundTint">@color/primaryLightColor</item>
+    </style>
+
+    <style name="textColor" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/primaryTextColor</item>
+    </style>
+
+    <style name="Boost" parent="Widget.AppCompat.TextView">
+        <item name="android:background">@color/secondaryLightColor</item>
+        <item name="android:backgroundTint">@color/secondaryLightColor</item>
+        <item name="android:textColor">@color/secondaryTextColor</item>
     </style>
 
 </resources>
