--- a/app/src/main/res/layout/item_temperature_config.xml
+++ b/app/src/main/res/layout/item_temperature_config.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
     android:orientation="vertical">
 
 
@@ -12,9 +11,11 @@
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textSize="18sp"
             android:textColor="@color/secondaryTextColor"
+            android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="22:50" />
@@ -25,17 +26,17 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-            android:textSize="14sp"
             android:textColor="@color/primaryLightColor"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@+id/time"
             app:layout_constraintTop_toBottomOf="@+id/time"
             tools:text="5" />
 
         <ImageButton
             android:id="@+id/deleteTemperatureConfigButton"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:background="#FFFFFF"
+            android:layout_width="36dp"
+            android:layout_height="48dp"
+            android:background="#00FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -44,7 +45,7 @@
         <ImageButton
             android:id="@+id/editTemperatureConfigButton"
             android:layout_width="36dp"
-            android:layout_height="36dp"
+            android:layout_height="48dp"
             android:layout_marginEnd="16dp"
             android:background="#00FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
