--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -143,7 +143,7 @@
         style="@style/Boost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/statusLayout">
@@ -165,13 +165,13 @@
             style="@style/Boost"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/deleteBoostButton"
             app:layout_constraintStart_toEndOf="@+id/boostActive"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="14:25" />
+            tools:text="22.5.2020 14:25" />
 
         <ImageButton
             android:id="@+id/deleteBoostButton"
@@ -182,6 +182,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_delete_black_24dp" />
+
+        <TextView
+            android:id="@+id/boostAuthor"
+            style="@style/Boost"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:gravity="center"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/boostActiveTill"
+            app:layout_constraintStart_toStartOf="@+id/boostActiveTill"
+            app:layout_constraintTop_toBottomOf="@+id/boostActiveTill"
+            tools:text="viktor.lehotsky@gmail.com" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
