--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -28,7 +28,9 @@
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_email" />
+        app:layout_constraintTop_toBottomOf="@+id/title_email"
+        android:hint="@string/email_address"
+        android:autofillHints="@string/email_address" />
 
 
     <TextView
@@ -53,7 +55,9 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_password" />
+        app:layout_constraintTop_toBottomOf="@+id/title_password"
+        android:hint="@string/password"
+        android:autofillHints="@string/password" />
 
     <Button
         android:id="@+id/login_button"
